# disk-image-rust-new

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  config.yaml  docker-compose.yml  forgelens.py  main.py  malware_rules.yar  mcp.json  mise.toml  newfeatures.md  package-lock.json  package.json  requirements.txt
.cargo/: config.toml
.github/workflows/: ci.yml
analysis/: file_hasher.py  file_metadata.py  virus_total_checker.py
automation/: auto_linux.py  auto_win.py
autopsy_plugin/: image_mounter_module.py
backend/: __init__.py  conftest.py  pyproject.toml  requirements.txt
backend/api/: __init__.py  server.py
backend/cli/: __init__.py  __main__.py  main.py  tui.py
backend/configs/: .env.example  settings.yaml
backend/core/: config.py
backend/tests/: __init__.py  test_evidence_manager.py  test_hashing.py  test_imager.py  test_linux_acquisition.py  test_macos_acquisition.py  test_metadata.py  test_usb_android_ios.py  test_v09_evidence_system.py  test_v11_memory.py  test_v12_artifacts.py  test_v13_remote.py  test_v14_ai.py  test_v20_enterprise.py  test_windows_acquisition.py
docs/: cli-usage.md  dev-phases.md  enabling-analysis-suite-features.md  features.md  final-documentation.md  hashes_guides.md  how-to-use.md  install.md  memory-dump.md  pgp_manifests.md  required-tools.md  showcase_guide.md  tech-stack.md  test-checklist.md  todo  walkthrough.md
forgelens-acquire/: Cargo.toml
forgelens-acquire/src/: main.rs
forgelens-cli/: Cargo.toml
forgelens-cli/src/: main.rs
forgelens-core/: Cargo.toml
forgelens-core/src/: ingest.rs  lib.rs  profile.rs  timeline.rs  translate.rs
forgelens-core/src/engine/: credentials.rs  dll.rs  file_recovery.rs  kernel.rs  malware.rs  memory.rs  mod.rs  network.rs  plugin.rs  process.rs  registry.rs  reporting.rs  symbols.rs  thread.rs  yara_engine.rs
forgelens-gui/: Cargo.toml
forgelens-gui/src/: app.rs  main.rs
forgelens-tauri/: Cargo.toml  build.rs  tauri.conf.json
forgelens-tauri/src/: main.rs
forgelens-tauri/ui/: app.js  index.html
frontend/: __init__.py  app.py  index.html  launch.py  main.js  style.css  theme.py  utils.py
frontend/components/: sidebar.py
frontend/views/: __init__.py  acquisition.py  cases.py  dashboard.py  devices.py  dfir.py  evidence.py  hashing.py  (+1 more)
imaging/: disk_imager.py  mounter.py
ioc/: ioc_detector.py
plugins/: README.md
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
tools/: README.md  setup_mounter.py  setup_winpmem.py
utils/: config_loader.py  json_to_table.py  logger_config.py  reporter.py
(+100 files in other folders)
