[package]
name = "forgelens-cli"
version = "0.1.0"
edition = "2021"
authors = ["ForgeLens Team"]
description = "Command-line interface for the ForgeLens memory forensics framework"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
forgelens-core = { path = "../forgelens-core" }
serde_json = "1.0.120"
serde = { version = "1.0.203", features = ["derive"] }
log = "0.4.22"
env_logger = "0.11.3"
chrono = "0.4.38"
