[package]
name = "forgelens-tauri"
version = "0.1.0"
edition = "2021"
authors = ["ForgeLens Team"]
description = "Tauri premium desktop application for the ForgeLens memory forensics framework"

[dependencies]
tauri = { version = "2.0.0-rc", features = ["devtools"] }
tauri-build = "2.0.0-rc"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
forgelens-core = { path = "../forgelens-core" }
rfd = "0.14.1"
log = "0.4.22"
env_logger = "0.11.3"

[build-dependencies]
tauri-build = "2.0.0-rc"
